--- a/tweets.html
+++ b/tweets.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-  <header>  <ul><li><a href="file:///C:/Users/Hazem/Documents/html_basic/index.html">homepage</a></li></ul></header>
+  <header>  <ul><li><a href="file:///C:/Users/Hazem/Documents/html_basic/index.htm">homepage</a></li></ul></header>
 
 <main><article>
     <h1>Light work</h1>
