--- a/index_html.html
+++ b/index_html.html
@@ -6,7 +6,7 @@
 <body>
     <header>
          <ul>
-            <li> <a href="file:///C:/Users/Hazem/Documents/html_basic/tweets.html>">My Tweets</a> </li>
+            <li> <a href="file:///C:/Users/Hazem/Documents/html_basic/tweets.html"> My Tweets </a> </li>
          </ul>
    </header>
 <main>
